--- a/app/src/main/res/layout/fragment_create_notes.xml
+++ b/app/src/main/res/layout/fragment_create_notes.xml
@@ -44,21 +44,21 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginStart="20dp"
-                android:src="@drawable/green_dot" />
+                android:background="@drawable/green_dot" />
 
             <ImageView
                 android:id="@+id/yellow"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginStart="15dp"
-                android:src="@drawable/yellow_dot" />
+                android:background="@drawable/yellow_dot" />
 
             <ImageView
                 android:id="@+id/red"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginStart="15dp"
-                android:src="@drawable/red_dot" />
+                android:background="@drawable/red_dot" />
 
         </LinearLayout>
 
