--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,5 +22,8 @@
         <action
             android:id="@+id/action_createNotes_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <argument
+            android:name="data"
+            app:argType="com.example.notesapp.Model.Notes" />
     </fragment>
 </navigation>
